--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
   </div>
   
   <script src="script.js"></script>
+  <script src="/path/to/howler.js"></script>
+<script>
+    var sound = new Howl({
+      src: ['sound.webm', 'sound.mp3']
+    });
+</script>
 </body>
 </html>
