--- a/index.html
+++ b/index.html
@@ -3,27 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mobile Drum App</title>
+  <title>Seojun Drum App</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="https://github.com/goldfire/howler.js.git"></script>
+  <!-- Include Howler.js from the CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 </head>
 <body>
+  <!-- ... Your HTML content ... -->
   <div class="drum-container">
-    <div class="drum-pad" data-key="0">
+    <div class="drum-pad" data-key="kick">
       Kick
     </div>
-    <div class="drum-pad" data-key="1">
+    <div class="drum-pad" data-key="snare">
       Snare
     </div>
     <!-- Add more drum-pad elements for other sounds -->
+    
+    <!-- ... Your drum pads ... -->
   </div>
-  
   <script src="script.js"></script>
-  <script src="/path/to/howler.js"></script>
-<script>
-    var sound = new Howl({
-      src: ['sound.webm', 'sound.mp3']
-    });
-</script>
 </body>
 </html>
