--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seojun Drum App</title>
+  <title>Mobile Drum App</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- Include Howler.js from the CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 </head>
 <body>
-  <!-- ... Your HTML content ... -->
   <div class="drum-container">
     <div class="drum-pad" data-key="kick">
       Kick
@@ -17,9 +15,6 @@
     <div class="drum-pad" data-key="snare">
       Snare
     </div>
-    <!-- Add more drum-pad elements for other sounds -->
-    
-    <!-- ... Your drum pads ... -->
   </div>
   <script src="script.js"></script>
 </body>
