--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 </head>
 <body>
+  <h1>서준이의 드럼</h1>
   <div class="drum-container">
     <div class="drum-pad" data-key="kick">
       Kick
