--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 </head>
 <body>
-  <h1>서준이의 드럼</h1>
+  <h1>Seojun's Drum</h1>
   <div class="drum-container">
-    <div class="drum-pad" data-key="kick">
-      Kick
-    </div>
     <div class="drum-pad" data-key="snare">
       Snare
+    </div>
+    <div class="drum-pad" data-key="kick">
+      Kick
     </div>
   </div>
   <script src="script.js"></script>
