--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
   <h1>Seojun's Drum</h1>
+  
+  <div class="image-row">
+    <img src="seojundrum.jpg" alt="seojundrum">
+    <img src="seojunbear.jpg" alt="seojunbear">
+    <img src="seojunpaint.jpg" alt="seojunpaint">
+  </div>
+  
   <div class="drum-container">
     <div class="drum-pad" data-key="snare">
       Snare
@@ -17,6 +24,7 @@
       Kick
     </div>
   </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
