--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   <!-- Music Player -->
   <audio id="musicPlayer" controls>
-    <source src="Alan Menken - A Whole New World (minus 3).mp3" type="audio/mpeg">
+    <source src="aladin.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
